이미지 가져오는거 커밋

--- a/Mega6Box/Mega6Box/Info.plist
+++ b/Mega6Box/Mega6Box/Info.plist
@@ -16,7 +16,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>MovieReservationPage</string>
+					<string>MovieSearchPage</string>
 				</dict>
 			</array>
 		</dict>
